--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="google-site-verification" content="GdwKCIwDHqQdpSleBGgTrkh6cvmvziV7XYl-mYDY2OI" />
 
         <!-- Links of CSS files -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
